--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ProBuilders | Строительные услуги</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -49,65 +50,31 @@
     <section id="services" class="services">
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Наши услуги</h2>
-            <div class="services-grid">
-                <!-- Service items will be populated by JavaScript -->
-            </div>
+            <div class="services-grid"></div>
         </div>
     </section>
 
-<!-- В разделе портфолио (замените существующий блок) -->
-<section id="portfolio" class="portfolio">
-    <div class="container">
-        <h2 class="section-title" data-aos="fade-up">Наши проекты</h2>
-        <div class="portfolio-filter">
-            <button class="filter-btn active" data-filter="all">Все</button>
-            <button class="filter-btn" data-filter="house">Дома</button>
-            <button class="filter-btn" data-filter="apartment">Квартиры</button>
-            <button class="filter-btn" data-filter="commercial">Коммерция</button>
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">Наши проекты</h2>
+            <div class="portfolio-filter">
+                <button class="filter-btn active" data-filter="all">Все</button>
+                <button class="filter-btn" data-filter="house">Дома</button>
+                <button class="filter-btn" data-filter="apartment">Квартиры</button>
+                <button class="filter-btn" data-filter="commercial">Коммерция</button>
+            </div>
+            <div class="portfolio-grid"></div>
         </div>
-        <div class="portfolio-grid">
-            <div class="portfolio-item" data-category="house">
-                <img src="https://images.unsplash.com/photo-1605276374104-dee2a0ed3cd6" alt="Современный дом">
-                <div class="portfolio-overlay">
-                    <h3>Загородный дом</h3>
-                    <p>Современный дизайн, 250 м²</p>
-                </div>
-            </div>
-            
-            <div class="portfolio-item" data-category="apartment">
-                <img src="https://images.unsplash.com/photo-1586023492125-27b2c045efd7" alt="Ремонт квартиры">
-                <div class="portfolio-overlay">
-                    <h3>Лофт-апартаменты</h3>
-                    <p>Москва, 120 м²</p>
-                </div>
-            </div>
+    </section>
 
-            <div class="portfolio-item" data-category="commercial">
-                <img src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9" alt="Офисное здание">
-                <div class="portfolio-overlay">
-                    <h3>Бизнес-центр</h3>
-                    <p>Стекло и бетон, 5000 м²</p>
-                </div>
-            </div>
-
-            <div class="portfolio-item" data-category="house">
-                <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6" alt="Деревянный дом">
-                <div class="portfolio-overlay">
-                    <h3>Экодом</h3>
-                    <p>Каркасная технология</p>
-                </div>
-            </div>
-
-            <div class="portfolio-item" data-category="apartment">
-                <img src="https://images.unsplash.com/photo-1556911220-bff31c812dba" alt="Кухня">
-                <div class="portfolio-overlay">
-                    <h3>Дизайнерская кухня</h3>
-                    <p>Индивидуальный проект</p>
-                </div>
-            </div>
+    <!-- About Section -->
+    <section id="about" class="about">
+        <div class="container">
+            <h2 class="section-title" data-aos="fade-up">О нас</h2>
+            <p class="about-text" data-aos="fade-up">Более 10 лет мы реализуем сложные строительные проекты, сочетая современные технологии и индивидуальный подход к каждому клиенту.</p>
         </div>
-    </div>
-</section>
+    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
@@ -133,6 +100,13 @@
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2024 ProBuilders. Все права защищены</p>
+        </div>
+    </footer>
 
     <!-- Scroll to Top -->
     <button class="scroll-top">
